--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <main class="container">
     <div class="card">
-      <img src="/assets/images/illustration-article.svg" alt="" class="card-image">
+      <img src="/images/illustration-article.svg" alt="" class="card-image">
       <p class="learning">learning</p>
       <p class="date">Published 21 Dec 2023</p>
       <h1 class="blog-title">HTML & CSS foundations</h1>
       <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <div class="author">
-        <img src="/assets/images/image-avatar.webp" alt="author-image" class="author-image">
+        <img src="/images/image-avatar.webp" alt="author-image" class="author-image">
         <p class="author-name">Greg Hooper</p>
       </div>
     </div>
